Getting action going

--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: 'generate-azurediagram'
+name: 'azurediagramsgithubactions'
 description: 'Runs AzureDiagramGenerator (as dotnet tool)'
 branding:
   icon: 'command'
